[tool.poetry]
name = "pubmed_fetcher_article"
version = "0.1.5"
description = "Fetch research papers from PubMed based on a query."
authors = ["kshitij sarve <kshitijsarve2001@gmail.com>"]
readme = "README.md"
packages = [{ include = "paper_fetcher" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
biopython = "1.84"
python-dotenv = "1.0.1"

[tool.poetry.scripts]
get-papers-list = "paper_fetcher.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"